k8s/apps/dvwa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
        - name: dvwa
          image: <DVWA_IMAGE_URI>
          ports:
            - containerPort: 80
