k8s/apps/dvwa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa
  namespace: default
spec:
  selector:
    app: dvwa
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
